force-app/main/default/objects/Stylist_Availability__c/Stylist_Availability__c.object-meta.xml
<CustomObject>
    <label>Stylist Availability</label>
    <pluralLabel>Stylist Availability</pluralLabel>
    <nameField>
        <label>Availability Name</label>
        <displayFormat>AVL-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Defines working hours for each stylist by day of week</description>
</CustomObject>