force-app/main/default/objects/Stylist_Availability__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this availability is currently active</description>
    <inlineHelpText>Uncheck to deactivate this schedule entry</inlineHelpText>
</CustomField>