force-app/main/default/objects/Stylist_Availability__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
    <description>When this schedule becomes effective</description>
    <inlineHelpText>Date this availability schedule starts. Leave blank if always effective.</inlineHelpText>
</CustomField>