force-app/main/default/objects/Stylist_Availability__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
    <required>true</required>
    <description>When the stylist stops working on this day</description>
    <inlineHelpText>What time does the stylist finish on this day?</inlineHelpText>
</CustomField>