force-app/main/default/objects/Stylist_Availability__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
    <required>true</required>
    <description>When the stylist starts working on this day</description>
    <inlineHelpText>What time does the stylist start on this day?</inlineHelpText>
</CustomField>