force-app/main/default/objects/Stylist_Availability__c/fields/Stylist__c.field-meta.xml
<CustomField>
    <fullName>Stylist__c</fullName>
    <label>Stylist</label>
    <type>MasterDetail</type>
    <referenceTo>Stylist__c</referenceTo>
    <relationshipLabel>Availability Schedule</relationshipLabel>
    <relationshipName>Availability</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>The stylist this availability applies to</description>
</CustomField>