force-app/main/default/objects/Stylist_Availability__c/listViews/Active_Schedules.listView-meta.xml
<ListView>
    <fullName>Active_Schedules</fullName>
    <columns>NAME</columns>
    <columns>Stylist__c</columns>
    <columns>Day_of_Week__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Schedules</label>
</ListView>