force-app/main/default/objects/Stylist_Availability__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Stylist__c</columns>
    <columns>Day_of_Week__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>